modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/enum_native_access.gd
func test():
	print(Node.ProcessMode)
